# gd-proto-profiler

./: .gitignore  LICENSE.txt  README.md
example/basic/: CMakeLists.txt  main.cpp
include/gdproto/profiling/: Config.h  PerfProfiler.h  PerfProfilerNode.h  PerfProfilerSection.h  Profile.h  ProfilerManager.h
src/: PerfProfiler.cpp  PerfProfilerNode.cpp  PerfProfilerSection.cpp  ProfilerManager.cpp  high_res_clock.cpp
